--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
-EditorStartupMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
-GameDefaultMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
+GlobalDefaultGameMode=/Game/ahmethan/abcGM.abcGM_C
+EditorStartupMap=/Game/ahmethan/test2Level.test2Level
+GameDefaultMap=/Game/ahmethan/test2Level.test2Level
 
 [/Script/Engine.RendererSettings]
 r.ForwardShading=True
