--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -104,6 +104,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="EnhancedInputForce",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=M)
++ActionMappings=(ActionName="drop",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C_Cedille)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=None
